[package]
name = "bcf_reader"
version = "0.1.0"
edition = "2021"

[lib]
name = "bcf_reader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "auto-initialize"] }
rust-htslib = { version = "0.49.0", features = ["libdeflate"] }

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"
